--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3'
 services:
     laravel.test:
         build:
-            context: ./vendor/laravel/sail/runtimes/8.2
+            context: ./docker/8.2
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
         image: sail-8.2/app
         extra_hosts:
-            - 'host.docker.internal:host-gateway'
+            - 'host.docker.internal:${DOCKER_HOST_IP}'
         ports:
             - '${APP_PORT:-80}:80'
             - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
@@ -24,6 +24,7 @@ services:
         depends_on:
             - mysql
             - redis
+
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
@@ -41,13 +42,10 @@ services:
         networks:
             - sail
         healthcheck:
-            test:
-                - CMD
-                - mysqladmin
-                - ping
-                - '-p${DB_PASSWORD}'
+            test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
             retries: 3
             timeout: 5s
+
     redis:
         image: 'redis:alpine'
         ports:
@@ -57,12 +55,50 @@ services:
         networks:
             - sail
         healthcheck:
-            test:
-                - CMD
-                - redis-cli
-                - ping
+            test: ["CMD", "redis-cli", "ping"]
             retries: 3
             timeout: 5s
+
+    nginx:
+        build:
+            context: "./docker/nginx"
+        depends_on:
+            - php-fpm
+        volumes:
+            - ${NGINX_SSL_PATH}:/etc/nginx/ssl
+            - ${APP_CODE_PATH_HOST}:${APP_CODE_PATH_CONTAINER}${APP_CODE_CONTAINER_FLAG}
+            - ${NGINX_HOST_LOG_PATH}:/var/log/nginx
+            - ${NGINX_SITES_PATH}:/etc/nginx/sites-available
+        ports:
+            #            port mappings, host to docker
+            - "${NGINX_HOST_HTTPS_PORT}:443"
+            - "${NGINX_HOST_HTTP_PORT}:80"
+        networks:
+            - sail
+
+    php-fpm:
+        build:
+            context: "./docker/php-fpm"
+        volumes:
+            - ${APP_CODE_PATH_HOST}:${APP_CODE_PATH_CONTAINER}${APP_CODE_CONTAINER_FLAG}
+        networks:
+            - sail
+        expose:
+            - "9000"
+
+    laravel-horizon:
+        build:
+            context: ./docker/laravel-horizon
+        volumes:
+            - ${APP_CODE_PATH_HOST}:${APP_CODE_PATH_CONTAINER}
+            - ./docker/laravel-horizon/supervisord.d:/etc/supervisord.d
+        depends_on:
+            - php-fpm
+        extra_hosts:
+            - "dockerhost:${DOCKER_HOST_IP}"
+        networks:
+            - sail
+
 networks:
     sail:
         driver: bridge
